<resources>
    <string name="app_name">MasterMind</string>
    <string name="welcome_text">Hello wilder !\nCan you break the code ?</string>
    <string name="name_hint">Enter your name</string>
    <string name="start_button_text">Hard mode</string>
    <string name="start_easy_mode">Easy mode</string>
    <string name="good_luck_text">Good luck wilder !</string>
    <string name="start_text">Can you guess the 5 numbers sequence ?</string>
    <string name="numbers_view"></string>
    <string name="answer_text">Give it a try !</string>
    <string name="previous_numbers"></string>
    <string name="previous_text">Last tries :</string>
    <string name="restart_button">New game</string>
</resources>
