<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarTrackVertical="@string/previous_numbers"
        tools:context=".GameActivity">

        <TextView
            android:id="@+id/goodLuckText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/good_luck_text"
            android:textAlignment="center"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_text"
            android:textAlignment="center"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/goodLuckText"
            tools:layout_editor_absoluteX="-9dp" />

        <TextView
            android:id="@+id/firstNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="10dp"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/secondNumber"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/secondNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/firstNumber"
            app:layout_constraintEnd_toStartOf="@+id/thirdNumber"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/firstNumber" />

        <TextView
            android:id="@+id/thirdNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/secondNumber"
            app:layout_constraintEnd_toStartOf="@+id/fourthNumber"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/secondNumber" />

        <TextView
            android:id="@+id/fourthNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/thirdNumber"
            app:layout_constraintEnd_toStartOf="@+id/fifthNumber"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/thirdNumber" />

        <TextView
            android:id="@+id/fifthNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="80dp"
            android:paddingHorizontal="10dp"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/fourthNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fourthNumber" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:text="0"
            app:layout_constraintEnd_toStartOf="@+id/button1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNumber" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            app:layout_constraintBaseline_toBaselineOf="@+id/button0"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button0" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2"
            app:layout_constraintBaseline_toBaselineOf="@+id/button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="3"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button0" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4"
            app:layout_constraintBaseline_toBaselineOf="@+id/button3"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button3" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5"
            app:layout_constraintBaseline_toBaselineOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button4" />

        <TextView
            android:id="@+id/answerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="24dp"
            android:text="@string/answer_text"
            android:textAlignment="center"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            tools:layout_editor_absoluteX="3dp" />

        <Button
            android:id="@+id/restart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/restart_button"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answerText" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/previous_text"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/answerText"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/previousTries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/previous_numbers"
            android:textAlignment="center"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>